--- a/src/helm/config/model_deployments.yaml
+++ b/src/helm/config/model_deployments.yaml
@@ -9,6 +9,17 @@
 #    model_deployments: [] # Leave empty to disable private model deployments
 
 model_deployments:
+
+  - name: stas/tiny-random-llama-2
+    model_name: stas/tiny-random-llama-2
+    tokenizer_name: stas/tiny-random-llama-2
+    max_sequence_length: 1024
+    max_request_length: 1025
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: stas/tiny-random-llama-2
+
   - name: simple/model1
     model_name: simple/model1
     tokenizer_name: simple/tokenizer1
@@ -3165,3 +3176,4 @@ model_deployments:
         class_name: "helm.clients.huggingface_client.HuggingFaceClient"
         args:
             pretrained_model_name_or_path: ibm-granite/granite-3.1-1b-a400m-base
+
