--- a/src/helm/config/tokenizer_configs.yaml
+++ b/src/helm/config/tokenizer_configs.yaml
@@ -10,6 +10,15 @@
 
 tokenizer_configs:
 
+  # Huggingface
+  - name: stas/tiny-random-llama-2
+    tokenizer_spec:
+      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+      args:
+        pretrained_model_name_or_path: stas/tiny-random-llama-2
+    end_of_text_token: "</s>"
+    prefix_token: "<s>"
+
   - name: simple/tokenizer1
     tokenizer_spec:
       class_name: "helm.tokenizers.simple_tokenizer.SimpleTokenizer"
