--- a/src/helm/config/model_deployments.yaml
+++ b/src/helm/config/model_deployments.yaml
@@ -10,15 +10,29 @@
 
 model_deployments:
 
+  # Luke model
   - name: stas/tiny-random-llama-2
     model_name: stas/tiny-random-llama-2
     tokenizer_name: stas/tiny-random-llama-2
-    max_sequence_length: 1024
-    max_request_length: 1025
+    max_sequence_length: 2000
+    max_request_length: 2001
     client_spec:
       class_name: "helm.clients.huggingface_client.HuggingFaceClient"
       args: 
         pretrained_model_name_or_path: stas/tiny-random-llama-2
+
+  - name: meta-llama/Meta-Llama-3-8B
+    model_name: meta-llama/Meta-Llama-3-8B
+    tokenizer_name: meta-llama/Meta-Llama-3-8B
+    max_sequence_length: 2048
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: meta-llama/Meta-Llama-3-8B
+
+
+
+        
 
   - name: simple/model1
     model_name: simple/model1
