--- a/src/helm/config/model_metadata.yaml
+++ b/src/helm/config/model_metadata.yaml
@@ -19,6 +19,14 @@ models:
     release_date: 2019-02-14
     tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
 
+  - name: meta-llama/Llama-3.1-8B 
+    display_name: Llama3.1-8B
+    description: Llama3.1-8B
+    creator_organization_name: meta
+    access: open
+    release_date: 2024-06-23
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
+
   - name: simple/model1
     display_name: Simple Model 1
     description: This is a test model.
