--- a/src/helm/config/tokenizer_configs.yaml
+++ b/src/helm/config/tokenizer_configs.yaml
@@ -19,6 +19,15 @@ tokenizer_configs:
     end_of_text_token: "</s>"
     prefix_token: "<s>"
 
+
+  # - name:  meta-llama/Meta-Llama-3-8B
+  #   tokenizer_spec:
+  #     class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+  #     args:
+  #       pretrained_model_name_or_path:  meta-llama/Meta-Llama-3-8B
+  #   end_of_text_token: "</s>"
+  #   prefix_token: "<s>"
+
   - name: simple/tokenizer1
     tokenizer_spec:
       class_name: "helm.tokenizers.simple_tokenizer.SimpleTokenizer"
