--- a/src/helm/config/model_deployments.yaml
+++ b/src/helm/config/model_deployments.yaml
@@ -11,6 +11,24 @@
 model_deployments:
 
   # Luke model
+  - name: prometheus-eval/prometheus-8x7b-v2.0
+    model_name: prometheus-eval/prometheus-8x7b-v2.0
+    tokenizer_name: prometheus-eval/prometheus-8x7b-v2.0
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: prometheus-eval/prometheus-8x7b-v2.0
+
+  - name: prometheus-eval/prometheus-7b-v2.0
+    model_name: prometheus-eval/prometheus-7b-v2.0
+    tokenizer_name: prometheus-eval/prometheus-7b-v2.0
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: prometheus-eval/prometheus-7b-v2.0
+
   - name: stas/tiny-random-llama-2
     model_name: stas/tiny-random-llama-2
     tokenizer_name: stas/tiny-random-llama-2
