--- a/src/helm/config/model_metadata.yaml
+++ b/src/helm/config/model_metadata.yaml
@@ -16,7 +16,23 @@ models:
     description: Tiny llama
     creator_organization_name: stas
     access: open
-    release_date: 2019-02-14
+    release_date: 2019-05-14
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
+
+  - name: prometheus-eval/prometheus-8x7b-v2.0
+    display_name: Prometheus (8x7b)
+    description: Prometheus (8x7b)
+    creator_organization_name: Prometheus
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
+
+  - name: prometheus-eval/prometheus-7b-v2.0
+    display_name: Prometheus (7B)
+    description: Prometheus (7B)
+    creator_organization_name: Prometheus
+    access: open
+    release_date: 2024-05-13
     tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
 
   - name: meta-llama/Llama-3.1-8B 
