--- a/src/helm/config/model_metadata.yaml
+++ b/src/helm/config/model_metadata.yaml
@@ -11,14 +11,31 @@
 
 models:
 
-  - name: stas/tiny-random-llama-2
-    display_name: Tiny Llama
-    description: Tiny llama
-    creator_organization_name: stas
+
+  ####################################################################
+  ######################### Luke Real Models #########################
+  ####################################################################
+
+  ######################### Llama #########################
+
+  - name: meta-llama/Llama-3.2-1B-Instruct
+    display_name: Llama-3.2-1B-Instruct
+    description: Llama-3.2-1B-Instruct
+    creator_organization_name: meta
     access: open
-    release_date: 2019-05-14
+    release_date: 1900-01-01
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
+  - name: meta-llama/Llama-3.1-8B 
+    display_name: Llama3.1-8B
+    description: Llama3.1-8B
+    creator_organization_name: meta
+    access: open
+    release_date: 2024-06-23
     tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
 
+  ######################### Prometheus #########################
+  
   - name: prometheus-eval/prometheus-8x7b-v2.0
     display_name: Prometheus (8x7b)
     description: Prometheus (8x7b)
@@ -35,13 +52,17 @@ models:
     release_date: 2024-05-13
     tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
 
-  - name: meta-llama/Llama-3.1-8B 
-    display_name: Llama3.1-8B
-    description: Llama3.1-8B
-    creator_organization_name: meta
+  - name: stas/tiny-random-llama-2
+    display_name: Tiny Llama
+    description: Tiny llama
+    creator_organization_name: stas
     access: open
-    release_date: 2024-06-23
+    release_date: 2019-05-14
     tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
+
+  ####################################################################
+  ############################ Toy Models ############################
+  ####################################################################
 
   - name: simple/model1
     display_name: Simple Model 1
