--- a/src/helm/config/model_deployments.yaml
+++ b/src/helm/config/model_deployments.yaml
@@ -16,7 +16,7 @@ model_deployments:
   ######################### Llama #########################
   - name: meta-llama/Llama-3.2-1B-Instruct
     model_name: meta-llama/Llama-3.2-1B-Instruct 
-    tokenizer_name: meta/llama-3.1-8b
+    tokenizer_name: meta-llama/Llama-3.2-1B-Instruct
     max_sequence_length: 131072
     client_spec:
       class_name: "helm.clients.huggingface_client.HuggingFaceClient"
@@ -31,6 +31,15 @@ model_deployments:
       class_name: "helm.clients.huggingface_client.HuggingFaceClient"
       args: 
         pretrained_model_name_or_path: meta-llama/Llama-3.1-8B 
+
+  # - name: meta-llama/Llama-3.1-8B-sentence 
+  #   model_name: meta-llama/Llama-3.1-8B 
+  #   tokenizer_name: meta-llama/Llama-3.1-8B-sentence
+  #   max_sequence_length: 131072
+  #   client_spec:
+  #     class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+  #     args: 
+  #       pretrained_model_name_or_path: meta-llama/Llama-3.1-8B 
 
   ######################### Prometheus #########################
 
