--- a/src/helm/config/tokenizer_configs.yaml
+++ b/src/helm/config/tokenizer_configs.yaml
@@ -18,6 +18,19 @@ tokenizer_configs:
 
   ######################### Llama #########################
 
+  - name: meta-llama/Llama-3.2-1B-Instruct
+    tokenizer_spec:
+      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+      args:
+        pretrained_model_name_or_path: meta-llama/Llama-3.1-8B-Instruct
+          #meta-llama/Meta-Llama-3.1-1B-Instruct
+    prefix_token: "<|begin_of_text|>"
+    end_of_text_token: "<|eot_id|>"
+
+
+  
+  ######################### Prometheus #########################
+
   - name: prometheus-eval/prometheus-8x7b-v2.0
     tokenizer_spec:
       class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
@@ -34,6 +47,9 @@ tokenizer_configs:
     end_of_text_token: "</s>"
     prefix_token: "<s>"
 
+  
+  ######################### Toy #########################
+
   - name: stas/tiny-random-llama-2
     tokenizer_spec:
       class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
@@ -49,6 +65,10 @@ tokenizer_configs:
       class_name: "helm.tokenizers.simple_tokenizer.SimpleTokenizer"
     end_of_text_token: "</s>"
     prefix_token: "<s>"
+
+  ####################################################################
+  ######################### Normal Models #########################
+  ####################################################################
 
   # AI21
   - name: ai21/j2-tokenizer
