--- a/src/helm/config/model_deployments.yaml
+++ b/src/helm/config/model_deployments.yaml
@@ -41,6 +41,16 @@ model_deployments:
   #     args: 
   #       pretrained_model_name_or_path: meta-llama/Llama-3.1-8B 
 
+  ######################### T5 #########################
+  - name:  distilbert/distilgpt2
+    model_name:  distilbert/distilgpt2
+    tokenizer_name:  distilbert/distilgpt2
+    max_sequence_length: 1024
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path:  distilbert/distilgpt2
+
   ######################### Prometheus #########################
 
 
