--- a/src/helm/config/model_metadata.yaml
+++ b/src/helm/config/model_metadata.yaml
@@ -60,6 +60,17 @@ models:
     release_date: 2019-05-14
     tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
 
+  ######################### T5 #########################
+
+ 
+  - name:  distilbert/distilgpt2
+    display_name:  distilbert/distilgpt2
+    description:  distilbert/distilgpt2
+    creator_organization_name: google 
+    access: open
+    release_date: 2025-01-01
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
+
   ####################################################################
   ############################ Toy Models ############################
   ####################################################################
