--- a/src/helm/config/tokenizer_configs.yaml
+++ b/src/helm/config/tokenizer_configs.yaml
@@ -15,7 +15,7 @@ tokenizer_configs:
   ####################################################################
 
 
-
+  #
   ######################### Llama #########################
 
   - name: meta-llama/Llama-3.2-1B-Instruct
@@ -27,6 +27,12 @@ tokenizer_configs:
     prefix_token: "<|begin_of_text|>"
     end_of_text_token: "<|eot_id|>"
 
+  ######################### T5 #########################
+  - name:  distilbert/distilgpt2
+    tokenizer_spec:
+      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+      args:
+        pretrained_model_name_or_path: distilbert/distilgpt2
 
   
   ######################### Prometheus #########################
@@ -46,7 +52,6 @@ tokenizer_configs:
         pretrained_model_name_or_path: prometheus-eval/prometheus-7b-v2.0
     end_of_text_token: "</s>"
     prefix_token: "<s>"
-
   
   ######################### Toy #########################
 
