--- a/src/helm/config/tokenizer_configs.yaml
+++ b/src/helm/config/tokenizer_configs.yaml
@@ -25,7 +25,7 @@ tokenizer_configs:
         pretrained_model_name_or_path: meta-llama/Llama-3.2-1B-Instruct
           #meta-llama/Meta-Llama-3.1-1B-Instruct
     prefix_token: "<|begin_of_text|>"
-    end_of_text_token: "<|eot_id|>"
+    end_of_text_token: "<|end_of_text|>"
 
   ######################### T5 #########################
   - name:  distilbert/distilgpt2
