--- a/src/helm/config/tokenizer_configs.yaml
+++ b/src/helm/config/tokenizer_configs.yaml
@@ -23,7 +23,14 @@ tokenizer_configs:
       class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
       args:
         pretrained_model_name_or_path: meta-llama/Llama-3.2-1B-Instruct
-          #meta-llama/Meta-Llama-3.1-1B-Instruct
+    prefix_token: "<|begin_of_text|>"
+    end_of_text_token: "<|end_of_text|>"
+
+  - name: meta-llama/Llama-3.1-8B-Instruct 
+    tokenizer_spec:
+      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+      args:
+        pretrained_model_name_or_path: meta-llama/Llama-3.1-8B-Instruct 
     prefix_token: "<|begin_of_text|>"
     end_of_text_token: "<|end_of_text|>"
 
@@ -394,7 +401,7 @@ tokenizer_configs:
       args:
         pretrained_model_name_or_path: meta-llama/Meta-Llama-3.1-8B-Instruct
     prefix_token: "<|begin_of_text|>"
-    end_of_text_token: "<|eot_id|>"
+    end_of_text_token: "<|end_of_text|>"
 
   - name: meta/llama-3.1-8b
     tokenizer_spec:
