--- a/instruct.env
+++ b/instruct.env
@@ -1,6 +1,12 @@
 #Ok, so: run all tasks. Then, see what happens  
+export NUM_TRAIN_TRIALS=1
+export METRICS="exact_match_indicator final_number_exact_match"
+#TASK="wmt_14:language_pair=de-en"
+export TASK="gsm:"
 
-{description: "self_instruct:model=instruction_following,num_respondents=1", priority: 1}
+
+
+#{description: "self_instruct:model=instruction_following,num_respondents=1", priority: 1}
   
 
 
