--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,7 @@ march_30_investigation
 local_test.ksh
 full_tests/beam2_8B.json
 test_gens.ipynb
+work_notes/work_notes
+local_test.ksh
+local_test.ksh
+local_test.ksh
