--- a/gsm.env
+++ b/gsm.env
@@ -1,4 +1,4 @@
 NUM_TRAIN_TRIALS=1
 METRICS="exact_match_indicator final_number_exact_match"
-#TASK="wmt_14:language_pair=de-en"
-TASK="gsm:"
+#TASK_NAME="wmt_14:language_pair=de-en"
+TASK_NAME="gsm:"
