--- a/instruct.env
+++ b/instruct.env
@@ -1,15 +1,17 @@
 #Ok, so: run all tasks. Then, see what happens  
 export NUM_TRAIN_TRIALS=1
 export METRICS="exact_match_indicator final_number_exact_match"
-#TASK="wmt_14:language_pair=de-en"
-export TASK="gsm:"
+export TASK_NAME="self_instruct:num_respondents=1,"
 export METRICS="Helpfulness Understandability Completeness Conciseness Harmlessness Keyword_Feedback"
 
 
-#{description: "self_instruct:model=instruction_following,num_respondents=1", priority: 1}
-  #{description: "grammar:path=src/helm/benchmark/scenarios/best_chatgpt_prompts.yaml,tags=,model=instruction_following,num_respondents=1", priority: 1}
-  #{description: "open_assistant:language=en,model=instruction_following,num_respondents=1", priority: 1}
-  #{description: "vicuna:model=instruction_following,num_respondents=1", priority: 1}
-  #{description: "koala:model=instruction_following,num_respondents=1", priority: 1}
-  #{description: "anthropic_hh_rlhf:subset=hh,model=instruction_following,num_respondents=1", priority: 1}
-  #{description: "anthropic_hh_rlhf:subset=red_team,model=instruction_following,num_respondents=1", priority: 3}
+#   {description: "self_instruct:model=instruction_following,num_respondents=1", priority: 1}
+#   {description: "anthropic_hh_rlhf:subset=hh,model=instruction_following,num_respondents=1", priority: 1}
+
+#   {description: "vicuna:model=instruction_following,num_respondents=1", priority: 1}
+#   {description: "koala:model=instruction_following,num_respondents=1", priority: 1}
+#   {description: "anthropic_hh_rlhf:subset=red_team,model=instruction_following,num_respondents=1", priority: 3}
+
+#probably not
+#   {description: "open_assistant:language=en,model=instruction_following,num_respondents=1", priority: 1}
+#   {description: "grammar:path=src/helm/benchmark/scenarios/best_chatgpt_prompts.yaml,tags=,model=instruction_following,num_respondents=1", priority: 1}
