--- a/src/helm/config/model_deployments.yaml
+++ b/src/helm/config/model_deployments.yaml
@@ -52,6 +52,19 @@ model_deployments:
   #     args: 
   #       pretrained_model_name_or_path: meta-llama/Llama-3.1-8B 
 
+  ######################### Olmo ######################### 
+
+  - name: allenai/OLMo-2-1124-13B-Instruct
+    model_name: allenai/OLMo-2-1124-13B-Instruct
+    tokenizer_name: allenai/OLMo-2-1124-13B-Instruct 
+    # meta/llama-3.1-8b-instruct
+    # meta/llama-3-8b-instruct
+    max_sequence_length: 131072
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: allenai/OLMo-2-1124-13B-Instruct
+
   ######################### T5 #########################
   - name:  distilbert/distilgpt2
     model_name:  distilbert/distilgpt2
