--- a/src/helm/config/model_metadata.yaml
+++ b/src/helm/config/model_metadata.yaml
@@ -68,6 +68,15 @@ models:
     release_date: 2019-05-14
     tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
 
+  ######################### Olmo ######################### 
+  - name: allenai/OLMo-2-1124-13B-Instruct
+    display_name: OLMo 13B
+    description: Olmo
+    creator_organization_name: allenai
+    access: open
+    release_date: 2019-05-14
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG,INSTRUCTION_FOLLOWING_MODEL_TAG]
+
   ######################### T5 #########################
 
  
