--- a/src/helm/config/model_deployments.yaml
+++ b/src/helm/config/model_deployments.yaml
@@ -97,6 +97,15 @@ model_deployments:
         pretrained_model_name_or_path: prometheus-eval/prometheus-7b-v2.0
 
 
+  - name: PKU-ONELab/Themis
+    model_name: PKU-ONELab/Themis
+    tokenizer_name: PKU-ONELab/Themis
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: PKU-ONELab/Themis
+
   ####################################################################
   ############################ Toy Models ############################
   ####################################################################
