--- a/src/helm/config/model_metadata.yaml
+++ b/src/helm/config/model_metadata.yaml
@@ -42,7 +42,7 @@ models:
     release_date: 2024-06-23
     tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
 
-  ######################### Prometheus #########################
+  ######################### LLM as judge #########################
   
   - name: prometheus-eval/prometheus-8x7b-v2.0
     display_name: Prometheus (8x7b)
@@ -60,13 +60,6 @@ models:
     release_date: 2024-05-13
     tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
 
-  - name: stas/tiny-random-llama-2
-    display_name: Tiny Llama
-    description: Tiny llama
-    creator_organization_name: stas
-    access: open
-    release_date: 2019-05-14
-    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
 
   ######################### Olmo ######################### 
   - name: allenai/OLMo-2-1124-13B-Instruct
@@ -76,6 +69,15 @@ models:
     access: open
     release_date: 2019-05-14
     tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG,INSTRUCTION_FOLLOWING_MODEL_TAG]
+
+  - name: PKU-ONELab/Themis
+    display_name: PKU-ONELab/Themis
+    description: PKU-ONELab/Themis
+    creator_organization_name: PKU-ONELab/Themis
+    access: open
+    release_date: 2019-05-14
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG,INSTRUCTION_FOLLOWING_MODEL_TAG]
+
 
   ######################### T5 #########################
 
@@ -92,6 +94,14 @@ models:
   ############################ Toy Models ############################
   ####################################################################
 
+  - name: stas/tiny-random-llama-2
+    display_name: Tiny Llama
+    description: Tiny llama
+    creator_organization_name: stas
+    access: open
+    release_date: 2019-05-14
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
+
   - name: simple/model1
     display_name: Simple Model 1
     description: This is a test model.
@@ -99,6 +109,9 @@ models:
     access: open
     release_date: 2023-01-01
     tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
+
+  ######################### Their models #########################
+
 
   # Adobe
   - name: adobe/giga-gan
