--- a/instruct.env
+++ b/instruct.env
@@ -2,7 +2,8 @@
 export NUM_TRAIN_TRIALS=1
 export METRICS="exact_match_indicator final_number_exact_match"
 export TASK_NAME="self_instruct:num_respondents=1,"
-export METRICS="Helpfulness Understandability Completeness Conciseness Harmlessness Keyword_Feedback"
+export METRICS="Helpfulness"
+#export METRICS="Helpfulness Understandability Completeness Conciseness Harmlessness Keyword_Feedback"
 
 
 #   {description: "self_instruct:model=instruction_following,num_respondents=1", priority: 1}
