--- a/src/helm/config/model_deployments.yaml
+++ b/src/helm/config/model_deployments.yaml
@@ -96,6 +96,14 @@ model_deployments:
       args: 
         pretrained_model_name_or_path: prometheus-eval/prometheus-7b-v2.0
 
+  - name: prometheus-eval/prometheus-13b-v1.0
+    model_name: prometheus-eval/prometheus-13b-v1.0
+    tokenizer_name: prometheus-eval/prometheus-13b-v1.0
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: prometheus-eval/prometheus-13b-v1.0
 
   - name: PKU-ONELab/Themis
     model_name: PKU-ONELab/Themis
