--- a/src/helm/config/model_metadata.yaml
+++ b/src/helm/config/model_metadata.yaml
@@ -50,7 +50,7 @@ models:
     creator_organization_name: Prometheus
     access: open
     release_date: 2024-05-13
-    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]  
 
   - name: prometheus-eval/prometheus-7b-v2.0
     display_name: Prometheus (7B)
@@ -59,6 +59,14 @@ models:
     access: open
     release_date: 2024-05-13
     tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
+
+  - name: prometheus-eval/prometheus-13b-v1.0
+    display_name: prometheus-13b-v1.0
+    description: prometheus-13b-v1.0
+    creator_organization_name: prometheus-eval
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
 
 
   ######################### Olmo ######################### 
