--- a/src/helm/config/tokenizer_configs.yaml
+++ b/src/helm/config/tokenizer_configs.yaml
@@ -70,7 +70,7 @@ tokenizer_configs:
     end_of_text_token: "</s>"
     prefix_token: "<s>"
 
-  - name: 
+  - name: prometheus-eval/prometheus-13b-v1.0
     tokenizer_spec:
       class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
       args:
