--- a/instruct.env
+++ b/instruct.env
@@ -1,18 +1,27 @@
 #Ok, so: run all tasks. Then, see what happens  
 export NUM_TRAIN_TRIALS=1
 export METRICS="exact_match_indicator final_number_exact_match"
-export TASK_NAME="self_instruct:num_respondents=1,"
 export METRICS="Helpfulness"
 #export METRICS="Helpfulness Understandability Completeness Conciseness Harmlessness Keyword_Feedback"
 
 
-#   {description: "self_instruct:model=instruction_following,num_respondents=1", priority: 1}
-#   {description: "anthropic_hh_rlhf:subset=hh,model=instruction_following,num_respondents=1", priority: 1}
+#references, 252 tasks
+#export TASK_NAME="self_instruct:num_respondents=1,"
 
-#   {description: "vicuna:model=instruction_following,num_respondents=1", priority: 1}
-#   {description: "koala:model=instruction_following,num_respondents=1", priority: 1}
-#   {description: "anthropic_hh_rlhf:subset=red_team,model=instruction_following,num_respondents=1", priority: 3}
+#no references, 169352 tasks
+#export TASK_NAME="anthropic_hh_rlhf:subset=hh,num_respondents=1,"
 
-#probably not
-#   {description: "open_assistant:language=en,model=instruction_following,num_respondents=1", priority: 1}
-#   {description: "grammar:path=src/helm/benchmark/scenarios/best_chatgpt_prompts.yaml,tags=,model=instruction_following,num_respondents=1", priority: 1}
+#no reference, 80 tasks
+export TASK_NAME="vicuna:num_respondents=1,"
+
+#no reference, 180
+#export TASK_NAME="koala:num_respondents=1,"
+
+#no reference, 38961
+#export TASK_NAME="anthropic_hh_rlhf:subset=red_team,num_respondents=1,"
+
+#3 references, 3670
+export TASK_NAME="open_assistant:language=en,num_respondents=1,"
+
+#no reference, 320
+#export TASK_NAME="grammar:path=src/helm/benchmark/scenarios/best_chatgpt_prompts.yaml,tags=,num_respondents=1,"
