--- a/instruct.env
+++ b/instruct.env
@@ -1,8 +1,7 @@
 #Ok, so: run all tasks. Then, see what happens  
 export NUM_TRAIN_TRIALS=1
-export METRICS="exact_match_indicator final_number_exact_match"
-export METRICS="Helpfulness"
-#export METRICS="Helpfulness Understandability Completeness Conciseness Harmlessness Keyword_Feedback"
+export DEFAULT_METRICS="Helpfulness"
+#export DEFAULT_METRICS="Helpfulness Understandability Completeness Conciseness Harmlessness Keyword_Feedback"
 
 
 #references, 252 tasks
