--- a/instruct.env
+++ b/instruct.env
@@ -1,6 +1,8 @@
 #Ok, so: run all tasks. Then, see what happens  
 export NUM_TRAIN_TRIALS=1
-export DEFAULT_METRICS="Helpfulness"
+export DEFAULT_METRICS=""
+export SNELLIUS_METRICS=example_themis
+
 #export DEFAULT_METRICS="Helpfulness Understandability Completeness Conciseness Harmlessness Keyword_Feedback"
 
 
