--- a/gsm.env
+++ b/gsm.env
@@ -1,4 +1,3 @@
 export NUM_TRAIN_TRIALS=1
 export DEFAULT_METRICS="exact_match_indicator final_number_exact_match"
-#TASK_NAME="wmt_14:language_pair=de-en"
-export TASK_NAME="gsm:"
+export TASK_NAMES="gsm:"
