--- a/wmt.env
+++ b/wmt.env
@@ -1,3 +1,3 @@
 NUM_TRAIN_TRIALS=1
 DEFAULT_METRICS="bleu_4 comet"
-TASK_NAME="wmt_14:language_pair=de-en,"
+TASK_NAMES="wmt_14:language_pair=de-en,"
