--- a/instruct.env
+++ b/instruct.env
@@ -11,6 +11,13 @@ export TASK_NAMES="${TASK_NAMES} koala:num_respondents=1,"
 export TASK_NAMES="${TASK_NAMES} anthropic_hh_rlhf:subset=red_team,num_respondents=1,"
 export TASK_NAMES="${TASK_NAMES} grammar:path=src/helm/benchmark/scenarios/best_chatgpt_prompts.yaml,tags=,num_respondents=1,"
 
+
+
+touch local.env
+. local.env
+
+echo SNELLIUS METRICS IS $SNELLIUS_METRICS
+
 #references, 252 tasks
 #export TASK_NAMES="self_instruct:num_respondents=1,"
 #no references, 169352 tasks
