--- a/src/helm/config/model_deployments.yaml
+++ b/src/helm/config/model_deployments.yaml
@@ -43,6 +43,15 @@ model_deployments:
       args: 
         pretrained_model_name_or_path: meta-llama/Llama-3.1-8B-Instruct
 
+  - name: meta-llama/Meta-Llama-3-70B-Instruct
+    model_name: meta-llama/Meta-Llama-3-70B-Instruct
+    tokenizer_name: meta-llama/Meta-Llama-3-70B-Instruct
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: meta-llama/Meta-Llama-3-70B-Instruct
+
   # - name: meta-llama/Llama-3.1-8B-sentence 
   #   model_name: meta-llama/Llama-3.1-8B 
   #   tokenizer_name: meta-llama/Llama-3.1-8B-sentence
