--- a/src/helm/config/model_deployments.yaml
+++ b/src/helm/config/model_deployments.yaml
@@ -63,6 +63,25 @@ model_deployments:
 
   ######################### Olmo ######################### 
 
+  - name: allenai/OLMo-2-0425-1B-Instruct
+    model_name: allenai/OLMo-2-0425-1B-Instruct
+    tokenizer_name: allenai/OLMo-2-0425-1B-Instruct
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: allenai/OLMo-2-0425-1B-Instruct
+
+
+  - name: allenai/OLMo-2-1124-7B-Instruct
+    model_name: allenai/OLMo-2-1124-7B-Instruct
+    tokenizer_name: allenai/OLMo-2-1124-7B-Instruct
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: allenai/OLMo-2-1124-7B-Instruct
+  
   - name: allenai/OLMo-2-1124-13B-Instruct
     model_name: allenai/OLMo-2-1124-13B-Instruct
     tokenizer_name: allenai/OLMo-2-1124-13B-Instruct 
@@ -74,15 +93,6 @@ model_deployments:
       args: 
         pretrained_model_name_or_path: allenai/OLMo-2-1124-13B-Instruct
 
-  - name: allenai/OLMo-2-0425-1B-Instruct
-    model_name: allenai/OLMo-2-0425-1B-Instruct
-    tokenizer_name: allenai/OLMo-2-0425-1B-Instruct
-    max_sequence_length: 32768
-    client_spec:
-      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
-      args: 
-        pretrained_model_name_or_path: allenai/OLMo-2-0425-1B-Instruct
-
   - name: allenai/OLMo-2-0325-32B-Instruct
     model_name: allenai/OLMo-2-0325-32B-Instruct
     tokenizer_name: allenai/OLMo-2-0325-32B-Instruct
@@ -92,14 +102,26 @@ model_deployments:
       args: 
         pretrained_model_name_or_path: allenai/OLMo-2-0325-32B-Instruct
 
-  - name: allenai/OLMo-2-1124-7B-Instruct
-    model_name: allenai/OLMo-2-1124-7B-Instruct
-    tokenizer_name: allenai/OLMo-2-1124-7B-Instruct
+
+        ### OLMO RM ####
+
+  - name: allenai/OLMo-2-1124-7B-RM
+    model_name: allenai/OLMo-2-1124-7B-RM
+    tokenizer_name: allenai/OLMo-2-1124-7B-RM
     max_sequence_length: 32768
     client_spec:
       class_name: "helm.clients.huggingface_client.HuggingFaceClient"
       args: 
-        pretrained_model_name_or_path: allenai/OLMo-2-1124-7B-Instruct
+        pretrained_model_name_or_path: allenai/OLMo-2-1124-7B-RM
+
+  - name: allenai/OLMo-2-1124-13B-RM
+    model_name: allenai/OLMo-2-1124-13B-RM
+    tokenizer_name: allenai/OLMo-2-1124-13B-RM
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: allenai/OLMo-2-1124-13B-RM
 
   ######################### T5 #########################
   - name:  distilbert/distilgpt2
