--- a/src/helm/config/tokenizer_configs.yaml
+++ b/src/helm/config/tokenizer_configs.yaml
@@ -43,27 +43,11 @@ tokenizer_configs:
     prefix_token: "<|begin_of_text|>"
 
   ######################### Olmo ######################### 
-  - name: allenai/OLMo-2-1124-13B-Instruct
-    tokenizer_spec:
-      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
-      args:
-        pretrained_model_name_or_path: allenai/OLMo-2-1124-13B-Instruct
-    prefix_token: "<|endoftext|>"
-    end_of_text_token: "<|endoftext|>"
-
   - name: allenai/OLMo-2-0425-1B-Instruct 
     tokenizer_spec:
       class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
       args:
         pretrained_model_name_or_path: allenai/OLMo-2-0425-1B-Instruct
-    end_of_text_token: "<|endoftext|>"
-    prefix_token: "<|endoftext|>" 
-
-  - name: allenai/OLMo-2-0325-32B-Instruct 
-    tokenizer_spec:
-      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
-      args:
-        pretrained_model_name_or_path: allenai/OLMo-2-0325-32B-Instruct
     end_of_text_token: "<|endoftext|>"
     prefix_token: "<|endoftext|>" 
 
@@ -74,6 +58,41 @@ tokenizer_configs:
         pretrained_model_name_or_path: allenai/OLMo-2-1124-7B-Instruct
     end_of_text_token: "<|endoftext|>"
     prefix_token: "<|endoftext|>"
+  
+  - name: allenai/OLMo-2-1124-13B-Instruct
+    tokenizer_spec:
+      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+      args:
+        pretrained_model_name_or_path: allenai/OLMo-2-1124-13B-Instruct
+    prefix_token: "<|endoftext|>"
+    end_of_text_token: "<|endoftext|>"
+
+  - name: allenai/OLMo-2-0325-32B-Instruct 
+    tokenizer_spec:
+      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+      args:
+        pretrained_model_name_or_path: allenai/OLMo-2-0325-32B-Instruct
+    end_of_text_token: "<|endoftext|>"
+    prefix_token: "<|endoftext|>" 
+
+
+          ### OLMO RM ###
+  - name: allenai/OLMo-2-1124-7B-RM 
+    tokenizer_spec:
+      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+      args:
+        pretrained_model_name_or_path: allenai/OLMo-2-1124-7B-RM
+    end_of_text_token: "<|endoftext|>"
+    prefix_token: "<|endoftext|>" 
+
+  - name: allenai/OLMo-2-1124-13B-RM 
+    tokenizer_spec:
+      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+      args:
+        pretrained_model_name_or_path: allenai/OLMo-2-1124-13B-RM
+    end_of_text_token: "<|endoftext|>"
+    prefix_token: "<|endoftext|>"
+
 
 
   ######################### T5 #########################
