--- a/gsm.env
+++ b/gsm.env
@@ -1,3 +1,4 @@
 export NUM_TRAIN_TRIALS=1
 export DEFAULT_METRICS="exact_match_indicator final_number_exact_match"
 export TASK_NAMES="gsm:"
+export SNELLIUS_METRICS=""
