--- a/src/helm/config/tokenizer_configs.yaml
+++ b/src/helm/config/tokenizer_configs.yaml
@@ -152,13 +152,20 @@ tokenizer_configs:
 
 
 
-  ######################### T5 #########################
+  ######################### Toy #########################
   - name:  distilbert/distilgpt2
     tokenizer_spec:
       class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
       args:
         pretrained_model_name_or_path: distilbert/distilgpt2
 
+  - name: sshleifer/tiny-gpt2 
+    tokenizer_spec:
+      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+      args:
+        pretrained_model_name_or_path: sshleifer/tiny-gpt2
+    end_of_text_token: "<|endoftext|>"
+    prefix_token: "<|endoftext|>" 
   
   ######################### LLM as judge #########################
 
