--- a/src/helm/config/model_deployments.yaml
+++ b/src/helm/config/model_deployments.yaml
@@ -23,14 +23,14 @@ model_deployments:
       args: 
         pretrained_model_name_or_path: meta-llama/Llama-3.2-1B-Instruct
 
-  # - name: meta-llama/Llama-3.1-8B 
-  #   model_name: meta-llama/Llama-3.1-8B 
-  #   tokenizer_name: meta/llama-3.1-8b
-  #   max_sequence_length: 131072
-  #   client_spec:
-  #     class_name: "helm.clients.huggingface_client.HuggingFaceClient"
-  #     args: 
-  #       pretrained_model_name_or_path: meta-llama/Llama-3.1-8B 
+  - name: meta-llama/Llama-3.1-8B
+    model_name: meta-llama/Llama-3.1-8B
+    tokenizer_name: meta-llama/Llama-3.1-8B
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: meta-llama/Llama-3.1-8B
 
   - name: meta-llama/Llama-3.1-8B-Instruct
     model_name: meta-llama/Llama-3.1-8B-Instruct  
