--- a/src/helm/config/model_metadata.yaml
+++ b/src/helm/config/model_metadata.yaml
@@ -26,6 +26,14 @@ models:
     release_date: 1900-01-01
     tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
 
+  - name: meta-llama/Llama-3.1-8B
+    display_name: Llama-3.1-8B
+    description: Llama-3.1-8B
+    creator_organization_name: meta-llama
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
   - name:  meta-llama/Llama-3.1-8B-Instruct
     display_name:  meta-llama/Llama-3.1-8B-Instruct
     description:  meta-llama/Llama-3.1-8B-Instruct
