--- a/src/helm/config/model_deployments.yaml
+++ b/src/helm/config/model_deployments.yaml
@@ -14,6 +14,16 @@ model_deployments:
   ####################################################################
 
   ######################### Llama #########################
+  - name: meta-llama/Llama-3.2-1B
+    model_name: meta-llama/Llama-3.2-1B
+    tokenizer_name: meta-llama/Llama-3.2-1B
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: meta-llama/Llama-3.2-1B
+
+
   - name: meta-llama/Llama-3.2-1B-Instruct
     model_name: meta-llama/Llama-3.2-1B-Instruct 
     tokenizer_name: meta-llama/Llama-3.2-1B-Instruct
