--- a/src/helm/config/model_metadata.yaml
+++ b/src/helm/config/model_metadata.yaml
@@ -50,6 +50,14 @@ models:
     release_date: 2024-06-23
     tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG]
 
+  - name: meta-llama/Llama-3.2-1B
+    display_name: Llama-3.2-1B
+    description: Llama-3.2-1B
+    creator_organization_name: meta-llama
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
   - name: meta-llama/Meta-Llama-3-70B-Instruct
     display_name: Meta-Llama-3-70B-Instruct
     description: Meta-Llama-3-70B-Instruct
