--- a/src/helm/config/tokenizer_configs.yaml
+++ b/src/helm/config/tokenizer_configs.yaml
@@ -18,6 +18,14 @@ tokenizer_configs:
   #
   ######################### Llama #########################
 
+  - name: meta-llama/Llama-3.2-1B 
+    tokenizer_spec:
+      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+      args:
+        pretrained_model_name_or_path: meta-llama/Llama-3.2-1B
+    end_of_text_token: "<|end_of_text|>"
+    prefix_token: "<|begin_of_text|>" 
+
   - name: meta-llama/Llama-3.2-1B-Instruct
     tokenizer_spec:
       class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
