--- a/src/helm/config/model_deployments.yaml
+++ b/src/helm/config/model_deployments.yaml
@@ -13,6 +13,17 @@ model_deployments:
   ######################### Luke Real Models #########################
   ####################################################################
 
+  
+  - name: Qwen/Qwen3-14B
+    model_name: Qwen/Qwen3-14B
+    tokenizer_name: Qwen/Qwen3-14B
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: Qwen/Qwen3-14B
+
+
   ######################### Llama #########################
   - name: meta-llama/Llama-3.2-1B
     model_name: meta-llama/Llama-3.2-1B
