--- a/src/helm/config/model_metadata.yaml
+++ b/src/helm/config/model_metadata.yaml
@@ -16,6 +16,14 @@ models:
   ######################### Luke Real Models #########################
   ####################################################################
 
+  - name: Qwen/Qwen3-14B
+    display_name: Qwen3-14B
+    description: Qwen3-14B
+    creator_organization_name: Qwen
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
   ######################### Llama #########################
 
   - name: meta-llama/Llama-3.2-1B-Instruct
