--- a/src/helm/config/tokenizer_configs.yaml
+++ b/src/helm/config/tokenizer_configs.yaml
@@ -15,7 +15,13 @@ tokenizer_configs:
   ####################################################################
 
 
-  #
+  - name: Qwen/Qwen3-14B 
+    tokenizer_spec:
+      class_name: "helm.tokenizers.huggingface_tokenizer.HuggingFaceTokenizer"
+      args:
+        pretrained_model_name_or_path: Qwen/Qwen3-14B
+    end_of_text_token: "<|im_end|>"
+    prefix_token: "None" 
   ######################### Llama #########################
 
   - name: meta-llama/Llama-3.2-1B 
