--- a/src/helm/config/model_deployments.yaml
+++ b/src/helm/config/model_deployments.yaml
@@ -13,16 +13,23 @@ model_deployments:
   ######################### Luke Real Models #########################
   ####################################################################
 
-  
-  - name: Qwen/Qwen3-14B
-    model_name: Qwen/Qwen3-14B
-    tokenizer_name: Qwen/Qwen3-14B
+  - name: Qwen/Qwen2.5-7B-Instruct
+    model_name: Qwen/Qwen2.5-7B-Instruct
+    tokenizer_name: Qwen/Qwen2.5-7B-Instruct
     max_sequence_length: 32768
     client_spec:
       class_name: "helm.clients.huggingface_client.HuggingFaceClient"
       args: 
-        pretrained_model_name_or_path: Qwen/Qwen3-14B
+        pretrained_model_name_or_path: Qwen/Qwen2.5-7B-Instruct
 
+  - name: Qwen/Qwen2.5-14B-Instruct
+    model_name: Qwen/Qwen2.5-14B-Instruct
+    tokenizer_name: Qwen/Qwen2.5-14B-Instruct
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: Qwen/Qwen2.5-14B-Instruct
 
   ######################### Llama #########################
   - name: meta-llama/Llama-3.2-1B
