--- a/src/helm/config/model_metadata.yaml
+++ b/src/helm/config/model_metadata.yaml
@@ -16,9 +16,17 @@ models:
   ######################### Luke Real Models #########################
   ####################################################################
 
-  - name: Qwen/Qwen3-14B
-    display_name: Qwen3-14B
-    description: Qwen3-14B
+  - name: Qwen/Qwen2.5-7B-Instruct
+    display_name: Qwen2.5-7B-Instruct
+    description: Qwen2.5-7B-Instruct
+    creator_organization_name: Qwen
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
+  - name: Qwen/Qwen2.5-14B-Instruct
+    display_name: Qwen2.5-14B-Instruct
+    description: Qwen2.5-14B-Instruct
     creator_organization_name: Qwen
     access: open
     release_date: 2024-05-13
