--- a/src/helm/config/model_deployments.yaml
+++ b/src/helm/config/model_deployments.yaml
@@ -41,6 +41,42 @@ model_deployments:
       args: 
         pretrained_model_name_or_path: Qwen/Qwen3-8B
 
+  - name: Qwen/Qwen3-0.6B
+    model_name: Qwen/Qwen3-0.6B
+    tokenizer_name: Qwen/Qwen3-0.6B
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: Qwen/Qwen3-0.6B
+
+  - name: Qwen/Qwen3-1.7B
+    model_name: Qwen/Qwen3-1.7B
+    tokenizer_name: Qwen/Qwen3-1.7B
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: Qwen/Qwen3-1.7B
+
+  - name: Qwen/Qwen3-4B
+    model_name: Qwen/Qwen3-4B
+    tokenizer_name: Qwen/Qwen3-4B
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: Qwen/Qwen3-4B
+
+  - name: Qwen/Qwen3-32B
+    model_name: Qwen/Qwen3-32B
+    tokenizer_name: Qwen/Qwen3-32B
+    max_sequence_length: 32768
+    client_spec:
+      class_name: "helm.clients.huggingface_client.HuggingFaceClient"
+      args: 
+        pretrained_model_name_or_path: Qwen/Qwen3-32B
+
   ######################### Llama #########################
   - name: meta-llama/Llama-3.2-1B
     model_name: meta-llama/Llama-3.2-1B
