--- a/src/helm/config/model_metadata.yaml
+++ b/src/helm/config/model_metadata.yaml
@@ -16,6 +16,38 @@ models:
   ######################### Luke Real Models #########################
   ####################################################################
 
+  - name: Qwen/Qwen3-0.6B
+    display_name: Qwen3-0.6B
+    description: Qwen3-0.6B
+    creator_organization_name: Qwen
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
+  - name: Qwen/Qwen3-1.7B
+    display_name: Qwen3-1.7B
+    description: Qwen3-1.7B
+    creator_organization_name: Qwen
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
+  - name: Qwen/Qwen3-4B
+    display_name: Qwen3-4B
+    description: Qwen3-4B
+    creator_organization_name: Qwen
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
+  - name: Qwen/Qwen3-32B
+    display_name: Qwen3-32B
+    description: Qwen3-32B
+    creator_organization_name: Qwen
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
   - name: Qwen/Qwen2.5-7B-Instruct
     display_name: Qwen2.5-7B-Instruct
     description: Qwen2.5-7B-Instruct
