--- a/src/helm/config/model_metadata.yaml
+++ b/src/helm/config/model_metadata.yaml
@@ -16,6 +16,44 @@ models:
   ######################### Luke Real Models #########################
   ####################################################################
 
+
+
+
+  ######################### Mistal ######################### 
+  - name: mistralai/Mistral-7B-v0.3
+    display_name: Mistral-7B-v0.3
+    description: Mistral-7B-v0.3
+    creator_organization_name: mistralai
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
+  - name: mistralai/Mistral-7B-Instruct-v0.3
+    display_name: Mistral-7B-Instruct-v0.3
+    description: Mistral-7B-Instruct-v0.3
+    creator_organization_name: mistralai
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
+  - name: mistralai/Ministral-8B-Instruct-2410
+    display_name: Ministral-8B-Instruct-2410
+    description: Ministral-8B-Instruct-2410
+    creator_organization_name: mistralai
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
+  - name: mistralai/Mathstral-7B-v0.1
+    display_name: Mathstral-7B-v0.1
+    description: Mathstral-7B-v0.1
+    creator_organization_name: mistralai
+    access: open
+    release_date: 2024-05-13
+    tags: [TEXT_MODEL_TAG, FULL_FUNCTIONALITY_TEXT_MODEL_TAG, INSTRUCTION_FOLLOWING_MODEL_TAG]
+
+
+  ######################### Qwen ######################### 
   - name: Qwen/Qwen3-0.6B
     display_name: Qwen3-0.6B
     description: Qwen3-0.6B
